Added "window.getauction" (Give it the index and it returns the /viewauction command and the json)

--- a/Page.html
+++ b/Page.html
@@ -22,6 +22,11 @@ async function refreshdata(){
     })
 }
 
+window.getauction = (index) => {
+    console.log(window.data.auctions[index])
+    console.log("/viewauction " + window.data.auctions[index]["uuid"])
+}
+
 refreshdata()
 
 </script>
